change app.js named and html calss

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1 class="doing mt-3 px-3" style="width: 200px">Todo List</h1>
+    <header class="d-flex justify-content-center">
+      <h1 class="mb-3">Todo List</h1>
     </header>
-    <main class="doing d-flex" style="width: 500px">
+    <main class="d-flex justify-content-center">
       <input type="text" class="todo" required />
       <input type="number" class="day" min="1" max="31" required />
       <input type="number" class="month" min="1" max="12" required />
       <button class="btn">+</button>
     </main>
-    <section class="d-flex flex-column doing">
-      <h1 class="doing px-3 mt-5">要做的事情</h1>
+    <section class="d-flex flex-column">
+      <h1 class="m-auto mt-5">要做的事情</h1>
     </section>
   </body>
   <script src="./app.js"></script>
